# stereo

./: README.md  descriptor.cpp  elas.cpp  filter.cpp
src/: .Makefile.swp  CMakeCache.txt  CMakeLists.txt  Makefile  aloe_left_disp.pgm  aloe_right_disp.pgm  cmake_install.cmake
src/src/: descriptor.cpp  descriptor.h  elas.cpp  elas.h  filter.cpp  image.h  main.cpp
